wip introduce Path class